--- a/podfile
+++ b/podfile
@@ -3,7 +3,6 @@
 use_frameworks!
 
 target 'Fun With Swift' do
-    pod 'Cartography', '~> 0.6'
-    pod 'PureLayout'
-end
+  pod 'PureLayout'
+  pod 'kingpin'end
 
